* Fixed chrome messing up post titles. * Made the admin interface more bareable on mobiles.

--- a/user/layouts/controlpanel/page-layout.css
+++ b/user/layouts/controlpanel/page-layout.css
@@ -1,35 +1,21 @@
 #banner
-{
-    position:absolute;
-    top:5%;
-    width:95%; 
-    height:5%;
+{ 
 }
 
 #admin-messagetray
 {
-    position:relative;
-    top:8%;
+    margin-bottom:4%;
     width:80%;
     left:10%;
-    height:14%;
-    min-height: 14%;
+    height:7%;
 }
 
 #admin-sidetabs
 {
-    position:absolute;
-    left:2%;
-    top:30%;
-    width:7%;
 }
 
 #admin-mainpanel
 {
-    position:absolute;
-    left:10%;
-    top:25%;
-    width:90%;
 }
 
 .alert{
