--- a/user/layouts/default/page-layout.css
+++ b/user/layouts/default/page-layout.css
@@ -44,3 +44,8 @@ body
 .breadcrumb{
     margin-top:3%;
 }
+
+#contents
+{
+    width:70%;
+}
